# tree-parser

./: .gitignore  Cargo.toml  README.md  instruction.md
.trae/rules/: project_rules.md
examples/: parse_project.rs
src/: languages.rs  lib.rs  parser.rs  search.rs  utils.rs
